// Docs: https://dbml.dbdiagram.io/docs

Project budget_construction {
  database_type: 'PostgreSQL'
}

Enum transaction_type {
  quote
  diy_estimate
  invoice
}

Enum quote_status {
  to_confirm
  to_negotiate
  validated
}

Enum invoice_status {
  unpaid
  on_hold
  paid
}

Enum invoice_type {
  full
  deposit
  interim
  balance
}

Enum payment_method {
  cash
  card
  wire
}

Enum budget_line_type {
  product
  breakdown
}

Enum project_status {
  draft
  active
  completed
  archived
}

TablePartial timestamps {
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table users {
  id integer [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  ~timestamps
  is_admin boolean [not null, default: false]
  is_active boolean [not null, default: true]
  deleted_at timestamp
}

Table suppliers {
  id integer [pk, increment]
  user_id integer [not null]
  name varchar(255) [not null]
  siret varchar(14)
  comment text
  ~timestamps
  deleted_at timestamp

  indexes {
    user_id [name: 'ix_suppliers_user_id']
    (user_id, name) [unique, name: 'uq_suppliers_user_id_name', note: 'Partial index: WHERE deleted_at IS NULL']
  }
}

Table supplier_contacts {
  id integer [pk, increment]
  supplier_id integer [not null]
  name varchar(255)
  phone_number varchar(50)
  email varchar(255)
  is_primary boolean [not null, default: false]
  ~timestamps

  indexes {
    id [name: 'ix_supplier_contacts_id']
    supplier_id [name: 'ix_supplier_contacts_supplier_id']
    supplier_id [unique, name: 'uq_supplier_contacts_primary_per_supplier', note: 'Partial index: WHERE is_primary IS TRUE']
  }

  Note: '''
    Supplier represents the company. Supplier contacts represent people working
    for that company. The API validates that writes include exactly one primary
    contact whenever contacts are supplied. The partial unique index prevents
    more than one primary contact per supplier at the database level.
  '''
}

Table projects {
  id integer [pk, increment]
  user_id integer [not null]
  template_id integer
  name varchar(255) [not null]
  description text
  location varchar(255)
  start_date date
  end_date date
  project_status project_status [not null, default: 'active']
  ~timestamps
  deleted_at timestamp

  indexes {
    user_id [name: 'ix_projects_user_id']
    template_id [name: 'ix_projects_template_id']
    (user_id, name) [unique, name: 'uq_projects_user_id_name', note: 'Partial index: WHERE deleted_at IS NULL']
  }
}

Table categories {
  id integer [pk, increment]
  name varchar(255) [not null, unique]
  sort_order integer [not null, default: 0]
  is_active boolean [not null, default: true]
  ~timestamps
}

Table subcategories {
  id integer [pk, increment]
  category_id integer [not null]
  name varchar(255) [not null]
  sort_order integer [not null, default: 0]
  is_active boolean [not null, default: true]
  ~timestamps

  indexes {
    category_id [name: 'ix_subcategories_category_id']
    (category_id, name) [unique, name: 'uq_subcategories_category_id_name']
  }
}

Table products {
  id integer [pk, increment]
  subcategory_id integer [not null]
  name varchar(255) [not null]
  sort_order integer [not null, default: 0]
  is_active boolean [not null, default: true]
  ~timestamps

  indexes {
    subcategory_id [name: 'ix_products_subcategory_id']
    (subcategory_id, name) [unique, name: 'uq_products_subcategory_id_name']
  }
}

Table templates {
  id integer [pk, increment]
  name varchar(255) [not null, unique]
  description text
  is_active boolean [not null, default: true]
  ~timestamps
}

Table template_items {
  id integer [pk, increment]
  template_id integer [not null]
  product_id integer [not null]
  default_name varchar(255) [not null]
  sort_order integer [not null, default: 0]
  is_required boolean [not null, default: true]
  ~timestamps

  indexes {
    template_id [name: 'ix_template_items_template_id']
    product_id [name: 'ix_template_items_product_id']
    (template_id, product_id) [unique, name: 'uq_template_items_template_id_product_id']
  }
}

Table budget_lines {
  id integer [pk, increment]
  project_id integer [not null]
  template_item_id integer
  product_id integer [not null]
  name varchar(255) [not null]
  item_type budget_line_type [not null]
  sort_order integer [not null, default: 0]
  ~timestamps
  deleted_at timestamp

  indexes {
    project_id [name: 'ix_budget_lines_project_id']
    template_item_id [name: 'ix_budget_lines_template_item_id']
    product_id [name: 'ix_budget_lines_product_id']
    (project_id, product_id) [unique, name: 'uq_budget_lines_project_id_product_id_product_type', note: 'Partial index: WHERE item_type = product AND deleted_at IS NULL']
  }

  Note: '''
    Products are the aggregation and reporting level.
    Breakdown budget_lines are linked directly to a product via product_id.
    budget_lines do not support parent/child relationships.
    For a given project + product, users must choose one budgeting mode:
    - one "product" budget_line representing the whole product, or
    - multiple "breakdown" budget_lines representing sub-items.
    Mixing both modes for the same project + product is forbidden.
    Payment installments (acompte, solde, etc.) must be modeled as multiple
    transactions on the same budget_line, not as additional breakdown budget_lines.
    Budget selection lives on transactions.is_selected_budget, not on this table.
    Any number of quotes and DIY estimates may be selected as budget for the
    same budget_line; there is no cap. A quote can be selected in any status
    except rejected.
    The selected budget amount is the sum of the TTC of every selected quote
    and DIY estimate transaction on the budget_line.
    Invoice transactions are never budget candidates.
  '''
}

Table transactions {
  id integer [pk, increment]
  budget_line_id integer [not null]
  supplier_id integer
  transaction_type transaction_type [not null]
  amount_ht decimal(12,2) [not null]
  vat_rate decimal(5,2)
  amount_vat decimal(12,2)
  amount_ttc decimal(12,2) [not null]
  issued_date date [not null]
  due_date date
  payment_date date
  description text
  quote_status quote_status
  invoice_status invoice_status
  invoice_type invoice_type
  payment_method payment_method
  is_selected_budget boolean [not null, default: false]
  ~timestamps
  deleted_at timestamp

  indexes {
    budget_line_id [name: 'ix_transactions_budget_line_id']
    supplier_id [name: 'ix_transactions_supplier_id']
  }

  checks {
    `amount_ht >= 0` [name: 'ck_transactions_amount_ht_positive']
    `vat_rate IS NULL OR vat_rate >= 0` [name: 'ck_transactions_vat_rate_positive']
    `amount_vat IS NULL OR amount_vat >= 0` [name: 'ck_transactions_amount_vat_positive']
    `amount_ttc >= 0` [name: 'ck_transactions_amount_ttc_positive']
    `amount_ttc >= amount_ht` [name: 'ck_transactions_ttc_greater_than_ht']
    `transaction_type = 'quote' OR quote_status IS NULL` [name: 'ck_transactions_quote_status_only_for_quotes']
    `transaction_type = 'invoice' OR invoice_status IS NULL` [name: 'ck_transactions_invoice_status_only_for_invoices']
    `transaction_type = 'invoice' OR invoice_type IS NULL` [name: 'ck_transactions_invoice_type_only_for_invoices']
    `transaction_type = 'invoice' OR payment_method IS NULL` [name: 'ck_transactions_payment_method_only_for_invoices']
    `transaction_type IN ('quote', 'invoice') OR due_date IS NULL` [name: 'ck_transactions_due_date_only_for_quotes_or_invoices']
    `transaction_type = 'invoice' OR payment_date IS NULL` [name: 'ck_transactions_payment_date_only_for_invoices']
    `NOT is_selected_budget OR transaction_type IN ('quote', 'diy_estimate')` [name: 'ck_transactions_selected_budget_candidate']
  }

  Note: '''
    is_selected_budget marks a quote or DIY estimate as contributing to its
    budget_line's selected budget. There is no uniqueness constraint: any
    number of quotes and DIY estimates may be selected simultaneously for the
    same budget_line.
  '''
}

Table documents {
  id integer [pk, increment]
  transaction_id integer [not null]
  user_id integer [not null]
  original_filename varchar(255) [not null]
  stored_filename varchar(255) [not null]
  file_path varchar(255) [not null]
  mime_type varchar(255) [not null]
  file_size integer [not null]
  ~timestamps
  deleted_at timestamp

  indexes {
    id [name: 'ix_documents_id']
    transaction_id [name: 'ix_documents_transaction_id']
    user_id [name: 'ix_documents_user_id']
  }
}

Ref: suppliers.user_id > users.id [delete: cascade]
Ref: supplier_contacts.supplier_id > suppliers.id [delete: cascade]
Ref: projects.user_id > users.id [delete: cascade]
Ref: projects.template_id > templates.id [delete: set null]
Ref: subcategories.category_id > categories.id [delete: cascade]
Ref: products.subcategory_id > subcategories.id [delete: cascade]
Ref: template_items.template_id > templates.id [delete: cascade]
Ref: template_items.product_id > products.id
Ref: budget_lines.project_id > projects.id [delete: cascade]
Ref: budget_lines.template_item_id > template_items.id [delete: set null]
Ref: budget_lines.product_id > products.id
Ref: transactions.budget_line_id > budget_lines.id [delete: cascade]
Ref: transactions.supplier_id > suppliers.id [delete: set null]
Ref: documents.transaction_id > transactions.id [delete: cascade]
Ref: documents.user_id > users.id [delete: cascade]
